// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withFeaturePaywall should not render the passed component when the feature is unavailable 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-container pl-lg-5 page container-fluid"
    >
      <div
        class="paywallContainer"
      >
        <div
          class="row"
        >
          <div
            class="col-12 col-lg-4 col-xl-5"
          >
            <h1
              class="header"
            >
              Track revenue from support
            </h1>
            <p
              class="infoText"
            >
              Uncover upsell opportunities, track revenue generated per agents to compensate your team based on actual sales.
            </p>
            <div
              class="mt-3 mb-5 d-inline-block"
            >
              <div
                class="d-flex align-items-center upgradeLink"
              >
                <a
                  to="[object Object]"
                >
                  <button
                    class="upgradeButton btn btn-outline-warning"
                    type="button"
                  >
                    <span
                      class="mr-2 upgradeLabel"
                    >
                      Upgrade to Advanced
                    </span>
                    <img
                      alt="upgrade-icon"
                      class="upgradeIcon"
                      src="test-file-stub"
                    />
                  </button>
                </a>
              </div>
            </div>
          </div>
          <div
            class="mt-5 mt-lg-0 pl-lg-5 preview col-12 col-lg-8 col-xl-7"
          >
            <img
              alt="Feature preview"
              class="img-fluid previewImage"
              src="/static/private/img/paywalls/screens/revenue-statistics.png"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`withFeaturePaywall should not render the passed component when the feature is unavailable and use a custom paywall 1`] = `
<div>
  <div
    data-testid="custom-paywall-component"
  >
    Custom Paywall
  </div>
</div>
`;

exports[`withFeaturePaywall should render the passed component when the feature is available 1`] = `
<div>
  <div
    data-testid="paywalled-component"
  >
    Just a component...
  </div>
</div>
`;
